hdone/objects/ProductObjectIdLookup__mdt.object
<CustomObject>
    <description>How an object is updated, if needed.</description>
    <fields>
        <fullName>EntryPoint__c</fullName>
        <description>Entry point used to determine when record is used for lookup. Usually same as a Flow entry poin</description>
        <inlineHelpText>Entry point</inlineHelpText>
        <label>EntryPoint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Action__c</fullName>
        <label>Object Action</label>
        <referenceTo>Object_Action__mdt</referenceTo>
        <relationshipLabel>ProductObjectIdLookups</relationshipLabel>
        <relationshipName>ProductObjectIdLookups</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object to get owner from</description>
        <inlineHelpText>Object to get owner from</inlineHelpText>
        <label>Object</label>
        <referenceTo>Object__mdt</referenceTo>
        <relationshipName>ProductObjectOwners</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Product_Object__c</fullName>
        <description>Product Object</description>
        <inlineHelpText>Product Object</inlineHelpText>
        <label>Product Object</label>
        <referenceTo>Product_Object__mdt</referenceTo>
        <relationshipName>ProductObjectOwners</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RelatedId__c</fullName>
        <description>Id used for lookup. Avoids hardcoding some references into application</description>
        <inlineHelpText>Id used for lookup</inlineHelpText>
        <label>RelatedId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>ProductObjectIdLookup</label>
    <pluralLabel>ProductObjectIdLookups</pluralLabel>
</CustomObject>